--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ chardet==4.0.0
 charset-normalizer==3.3.0
 click==8.1.7
 #colorama==0.4.4
-command-not-found==0.3
+#command-not-found==0.3
 cryptography==3.4.8
 dacite==1.8.1
 dbus-python==1.2.18
