--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ cryptography==3.4.8
 dacite==1.8.1
 dbus-python==1.2.18
 distlib==0.3.7
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
+#distro==1.7.0
+#distro-info==1.1+ubuntu0.1
 filelock==3.12.4
 Flask==2.3.2
 gyp==0.1
