--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ pyinotify==0.9.6
 PyJWT==2.3.0
 pyOpenSSL==21.0.0
 pyparsing==2.4.7
-python-apt==2.4.0+ubuntu2
+#python-apt==2.4.0+ubuntu2
 pytz==2022.1
 PyYAML==5.4.1
 requests==2.30.0
