--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ pyOpenSSL==21.0.0
 pyparsing==2.4.7
 #python-apt==2.4.0+ubuntu2
 pytz==2022.1
-PyYAML==5.4.1
+#PyYAML==5.4.1
 requests==2.30.0
 responses==0.23.3
 scikit-learn==1.2.2
