--- a/requirements.txt
+++ b/requirements.txt
@@ -162,7 +162,7 @@ types-vobject==0.9
 types-waitress==0.1
 types-Werkzeug==1.0
 types-xxhash==2.0
-typing_extensions==4.5.0
+#typing_extensions==4.5.0
 ubuntu-advantage-tools==8001
 ufw==0.36.1
 unattended-upgrades==0.1
