--- a/requirements.txt
+++ b/requirements.txt
@@ -165,7 +165,7 @@ types-xxhash==2.0
 #typing_extensions==4.5.0
 #ubuntu-advantage-tools==8001
 #ufw==0.36.1
-unattended-upgrades==0.1
+#unattended-upgrades==0.1
 urllib3==2.0.5
 virtualenv==20.24.5
 wadllib==1.3.6
