--- a/requirements.txt
+++ b/requirements.txt
@@ -166,9 +166,9 @@ types-xxhash==2.0
 #ubuntu-advantage-tools==8001
 #ufw==0.36.1
 #unattended-upgrades==0.1
-urllib3==2.0.5
+#urllib3==2.0.5
 virtualenv==20.24.5
-wadllib==1.3.6
-webencodings==0.5.1
-Werkzeug==3.0.0
+#wadllib==1.3.6
+#webencodings==0.5.1
+#Werkzeug==3.0.0
 zipp==1.0.0
