--- a/requirements.txt
+++ b/requirements.txt
@@ -163,12 +163,12 @@ types-waitress==0.1
 types-Werkzeug==1.0
 types-xxhash==2.0
 #typing_extensions==4.5.0
-#ubuntu-advantage-tools==8001
-#ufw==0.36.1
-#unattended-upgrades==0.1
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
 #urllib3==2.0.5
 virtualenv==20.24.5
 #wadllib==1.3.6
 #webencodings==0.5.1
-#Werkzeug==3.0.0
+Werkzeug==3.0.0
 zipp==1.0.0
