--- a/requirements.txt
+++ b/requirements.txt
@@ -161,7 +161,7 @@ types-urllib3==1.26.25.14
 types-vobject==0.9
 types-waitress==0.1
 types-Werkzeug==1.0
-types-xxhash==2.0
+#types-xxhash==2.0
 #typing_extensions==4.5.0
 ubuntu-advantage-tools==8001
 ufw==0.36.1
